# TrustIssues

./: CMakeLists.txt  README.md  The .gitignore
SRC/: README.md
include/: FileHandler.h
src/: FileHandler.cpp  main.cpp
